Remove mock fields data

--- a/src/main/webapp/tds/web-app/css/page/module/reports/application-conflicts-component.sass
+++ b/src/main/webapp/tds/web-app/css/page/module/reports/application-conflicts-component.sass
@@ -18,11 +18,13 @@
         font-weight: bold
   .odd
     padding: 5px
+    display: flex
     div.data-item
       background: white
       border-right: 2px solid white
   .even
     padding: 5px
+    display: flex
     div.data-item
       background: lightgray
       border-right: 2px solid white
