Fix error displaying dependencies counter Remove mock data

--- a/src/main/webapp/tds/web-app/app-js/modules/reports/components/application-conflicts/application-conflicts.component.html
+++ b/src/main/webapp/tds/web-app/app-js/modules/reports/components/application-conflicts/application-conflicts.component.html
@@ -121,7 +121,7 @@
 							</div>
 				
 							<div class="row dependency-header" *ngIf="item.dependencies.length">
-									<div class="col-sm-2 title">Dependencies ({{item.supports.length}} issues)</div>
+									<div class="col-sm-2 title">Dependencies ({{item.dependencies.length}} issues)</div>
 									<div class="col-sm-10"></div>
 							</div>
 				
