Set color red to bundles with value equal to current filter

--- a/src/main/webapp/tds/web-app/css/page/module/reports/application-conflicts-component.sass
+++ b/src/main/webapp/tds/web-app/css/page/module/reports/application-conflicts-component.sass
@@ -2,6 +2,7 @@
   padding: 0 30px
   .field-error
     color: red
+    font-weight: bold
   .application-container
     margin-bottom: 40px
   .results
