TM-12027 - Work In Progress

--- a/src/main/webapp/tds/web-app/app-js/shared/modules/header/components/tranman-menu/tranman-menu.component.html
+++ b/src/main/webapp/tds/web-app/app-js/shared/modules/header/components/tranman-menu/tranman-menu.component.html
@@ -295,7 +295,7 @@
                 <ul class="dropdown-menu menu-item-expand" role="menu">
                     <li class="menu-parent-item">Planning</li>
                     <li class="menu-child-item menu-reports-application-profiles">
-                        <a href="/tdstm/reports/applicationProfiles">Application Profiles</a>
+											<a [routerLink]="['reports','applicationProfiles']" >Application Profiles</a>
                     </li>
                     <li class="menu-child-item menu-reports-application-conflicts">
                         <a href="/tdstm/reports/applicationConflicts">Application Conflicts</a>
