--- a/src/main/webapp/tds/web-app/css/page/index.sass
+++ b/src/main/webapp/tds/web-app/css/page/index.sass
@@ -50,3 +50,4 @@
 @import "module/reports/task-report.component"
 @import "module/reports/server-conflicts-report.component"
 @import "module/reports/application-event-results-report.component"
+@import "module/reports/application-profiles-report.component"
